--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Freelancer Stefano Straga</title>
 </head>
 <body>
@@ -69,8 +70,33 @@
 
         <section>
             <h2>Contacto</h2>
-            <form action="">
-                
+            <form>
+                <fieldset>
+                    <legend>Contactame llenando todos los campos</legend>
+                    <div>
+                        <label>Nombre</label>
+                        <input type="text" placeholder="Tu Nombre">
+                    </div>
+
+                    <div>
+                        <label>Telefono</label>
+                        <input type="tel" placeholder="Tu Telefono">
+                    </div>
+
+                    <div>
+                        <label>Correo</label>
+                        <input type="email" placeholder="Tu Email">
+                    </div>
+
+                    <div>
+                        <label>Mensaje</label>
+                        <textarea cols="30" rows="10"></textarea>
+                    </div>
+
+                    <div>
+                        <input type="submit" value="Enviar">
+                    </div>
+                </fieldset>
             </form>
         </section>
     </main>
